Fix achievement global progress overlay overflowing

--- a/styles/achievements.css
+++ b/styles/achievements.css
@@ -182,6 +182,16 @@ html {
 	position: relative;
 }
 
+.steamdb_achievement_global_progress_overlay {
+	background: linear-gradient(
+		to right,
+		#23262e 40px,
+		#31343e 40px,
+		#31343e var(--steamdb-progress),
+		#23262e var(--steamdb-progress)
+	);
+}
+
 .steamdb_achievement_image {
 	width: 58px;
 	height: 58px;
@@ -231,15 +241,6 @@ html {
 .steamdb_achievement_checkmark > svg {
 	width: 20px;
 	fill: #fff;
-}
-
-.steamdb_achievement_global_progress_overlay {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 40px;
-	background-color: rgb(103 112 123 / 20%);
-	pointer-events: none;
 }
 
 .steamdb_achievement_unlock {
